front end (wip)

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
 <body>
   <section id="main">
     <h1>organization thing</h1>
+    <div id="topics"></div>
   </section>
   <script src="./index.js"></script>
 </body>
