--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,9 @@
   <title>organization-items</title>
 </head>
 <body>
+  <nav>
+    <button id="edit">edit</button>
+  </nav>
   <section id="main">
     <h1>organization thing</h1>
     <div id="topics"></div>
