front end (wip)

--- a/static/index.html
+++ b/static/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>organization-items</title>
+  <link rel="stylesheet" href="style.css">
+  <title>organization - items</title>
 </head>
 <body>
   <nav>
-    <button id="edit">edit</button>
+    <a href="./edit.html"><button id="edit">edit</button></a>
   </nav>
   <section id="main">
     <h1>organization thing</h1>
