1st working version

--- a/static/edit.html
+++ b/static/edit.html
@@ -15,7 +15,8 @@
     <p>current topics:</p>
     <ul id="topicList"></ul>
     <input type="text" name="topic" id="topic">
-    <button id="add">add</button>
+    <button id="add">add new</button>
+    <button id="editTopic">edit topic</button>
     <button id="remove">remove</button>
 
     <div id="newItems" class="invis">
@@ -24,6 +25,12 @@
       </div>
       <button id="addItem">add item</button>
       <button id="done">done</button>
+    </div>
+    <div id="edit" class="invis">
+      <ul id="topicItms"></ul>
+      <input type="text" name="newItm" id="newItm">
+      <button id="addItm">add item</button>
+      <button id="submit">submit</button>
     </div>
   </section>
 
